--- a/home/templates/home/post.html
+++ b/home/templates/home/post.html
@@ -6,7 +6,7 @@
     <form action="{% url 'post' %}" method="post">
         {% csrf_token %}
         {{ form }}
-        <input type="submit" value="Submit">
+        <input class='submit' type="submit" value="Submit">
     </form>
     <p>{{message}}</p>
 </div>
