--- a/home/templates/home/signup.html
+++ b/home/templates/home/signup.html
@@ -2,11 +2,11 @@
 
 
 {% block body %}
-<div>
+<div class='form'>
     <form action="{% url 'signup' %}" method="post">
     {% csrf_token %}
     {{form}}
-        <input type="submit" value="Submit">
+        <input class='submit' type="submit" value="Submit">
     </form>
     {% if message %} 
     <p>{{message}}</p>
