--- a/static/home/styles.css
+++ b/static/home/styles.css
@@ -1,40 +1,120 @@
-.author {
-  font-size: 15px;
+.content{
+  width: 100%;
 }
 
-.blog {
-  border-width: 1px;
-  background-color: rgb(224, 224, 224);
-  border-color: grey;
-  border-style: solid;
-  margin: 10px 0;
+.blogs{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  /* overflow: hidden; */
+
+}
+
+.blog{
+  display: block;
+  color: black;
+  text-decoration: none;
+  height: 150px;
+
+
+}
+
+.blog-container{
+  margin-bottom: 20px;
+  width: 100%;
+  height: 100%;
+  font-family: Arial, Helvetica, sans-serif;
+  padding-bottom: 10px;
+  box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.281), 0 4px 10px 0 rgba(26, 26, 26, 0.19);
+  border: rgba(219, 219, 219, 0.3) 1px solid;
+}
+
+.paragraph-container{
+  --max-lines: 3;
+  position: relative;
+  max-height: calc(var(--lh) * var(--max-lines));
+  overflow: hidden;
+  padding-right: 1rem; 
+}
+
+.title{
+  line-height: 20px;
+  margin-right: 2%;
+}
+
+.name{
+  font-size: small;
+}
+.content-container{
+  width: 100%;
+  height: 100%;
+  padding-left: 1%;
   overflow: hidden;
 }
 
-.title {
-  background-color: rgb(133, 133, 133);
-  height: fit-content;
-  padding: 1px 10px;
-  font-size: large;
+.authors-container{
+  height: 100%;
+  width: 100%;
 }
 
-a,
-a:hover,
-a:visited,
-a:active,
-a:link {
-  color: black;
+.author-list{
+  list-style-type: none;
+  list-style: none;
+  padding: 0;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 300;
+}
+
+.author{
   text-decoration: none;
+  color: rgb(0, 81, 255);
+}
+
+.author:hover{
+  text-decoration: underline;
+}
+
+
+.posts{
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+
+.form{
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.content {
-  padding: 2px 10px;
-  font-size: large;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  height: 60px;
+
+.block{
+  display: block;
+  height: 20px;
+  width: 40%;
+  margin-bottom: 10px;
 }
+
+.block:hover{
+  background-color: rgb(235, 235, 235);
+  border: solid rgba(41, 129, 245, 0.349) 2px;
+  border-radius: 3px;
+}
+
+.submit{
+  height: 30px;
+  width: 15%;
+  background-color: rgb(21, 95, 255);
+  border-radius: 5px;
+  border-style: none;
+  font-size: medium;
+  color: white;
+  font-weight: 700;
+}
+
+.content-form{
+  height: 100px;
+}
+
+
 
 .body {
   height: 100%;
